# esp-door-server

./: Cargo.toml  Dockerfile  docker-compose.yml
migrations/2023-05-26-192832_init/: down.sql  up.sql
migrations/2023-05-26-214627_make discord_id string/: down.sql  up.sql
migrations/2023-06-05-200558_add_door_codes/: down.sql  up.sql
migrations/2023-06-05-211445_door_code_edit/: down.sql  up.sql
migrations/2023-06-12-195552_added door owner/: down.sql  up.sql
migrations/2023-06-23-091406_rename avatar column/: down.sql  up.sql
migrations/2023-07-31-213446_access_history_table/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/routes/: auth.rs  door.rs  door_code.rs  general.rs  mod.rs  user.rs  websocket.rs
