[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
oauth2 = "4.4"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-session = "3.0.0"
axum = { version = "0.6.18", features = ["headers", "ws"] }
axum-extra = { version = "0.7.4" }
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel_migrations = "2.1.0"
futures = "0.3.28"
futures-util = { version = "0.3.28", features = ["sink", "std"] }
serde_json = "1.0.96"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
